adding make run, fixing jvm args for compile and for sbt run